--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">WELCOME TO POC</h1>
-    <h1 style="background-color:DodgerBlue;">Hello World</h1>	
+    <h1 class="display-4">WELCOME TO POC!!!!</h1>
+    <h1 style="background-color:Red;">Hello World</h1>	
     </div>
